# desktop-layer

./: .gitignore  NOTES.md  README.md  config.json.example  desktop-layer.py  desktop-layer.service  manifest.yaml  pyproject.toml  repo_meta.json  trait_gui.yaml  trait_published.yaml  trait_python.yaml  trait_systemd-service.yaml
pkg/: desktop-layer.desktop
pkg/systemd/: desktop-layer.service
src/desktop_layer/: desktop_layer.py
