[project]
name = "desktop-layer"
description = "Clickable desktop surface for right-click menu and window unfocus on Wayfire"
version = "0.1.0"
requires-python = ">=3.10"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Ckrest"}]
dependencies = [
    "PyGObject>=3.42",
]

[project.scripts]
desktop-layer = "desktop_layer.desktop_layer:main"

[project.urls]
Repository = "https://github.com/Ckrest/desktop-layer"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
